fixed zoom on iOS

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -430,4 +430,5 @@ nav ul li a:hover {
 input,
 textarea {
   font-size: 16px !important;
+  color: #757575;
 }
